# study-raylib-c-with-cmake

./: CMakeLists.txt  README.md
_cmake/: compiler_options.cmake  yacc.cmake
breakout/: CMakeLists.txt
breakout/src/: main.c
cmake/: compiler_options.cmake
flappy/: CMakeLists.txt
flappy/src/: main.c
lifegame/: CMakeLists.txt
lifegame/src/: main.c  main.c.uncrustify
snake/: CMakeLists.txt  README.md
snake/src/: main.c
tetris/: CMakeLists.txt  README.md
tetris/src/: constants.h  game_grid.c  game_grid.h  main.c  mino.c  mino.h  shape_manager.c  shape_manager.h  structs.h  utils.c  utils.h  yac_types.h
tetris/src/containers/: vec.c  vec.h
